--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,10 +1,30 @@
-.footer{
+/* .footer{
   width: 100%;
-  height: 3em;
+  height: auto;
   padding-top: 0.7em;
 
-  background-color: green;
+  background-color: black;
+} */
+.footer {
+  color:white;
+
 }
 .footer-large-menu-classname{
-  
+  background-color: black;
+  padding-bottom: 0.1em;
+  padding-right: 1em;
+
+
+
+  /* display: inline; */
+  text-align: right;
+
+}
+.footer-large-menu-classname ul li {
+  display: inline;
+  padding: 0.2em 0.6em;;
+  width: 60%;
+  color:black;
+
+
 }
