--- a/src/styles/topnav.css
+++ b/src/styles/topnav.css
@@ -23,7 +23,7 @@
   text-align: right;
   /* width: 100%; */
 }
-ul li{
+.largeMenuClassName ul li{
   display: inline;
   padding: 2em 0.5em;
   width: 60%;
